cluster-config/ado-agent/ado-agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ado-agent
  namespace: ado-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ado-agent
  template:
    metadata:
      labels:
        app: ado-agent
    spec:
      containers:
      - name: ado-agent
        image: mabenoit/ado-agent:15670
        volumeMounts:
          - mountPath: /var/run/docker.sock
            name: docker-socket-volume
      volumes:
        - name: docker-socket-volume
          hostPath:
            path: /var/run/docker.sock
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.azure.com/mode: user
